# ifcb-features

./: Dockerfile  README.md  blob_storage.py  extract_slim_features.py  feature_storage.py  pyproject.toml  requirements.txt  storage.py
.github/workflows/: docker.yml  test.yml
ifcb_features/: all.py  batch_processing.py  biovolume.py  blob_geometry.py  blobs.py  hog.py  morphology.py  phasecong.py  segmentation.py
tests/: generate_golden.py  test_regression.py
tests/golden/: IFCB5_2012_028_081515_features_v4.csv
