[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifcb-features"
version = "1.1.1"
description = "IFCB feature extraction tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joe Futrelle", email = "jfutrelle@whoi.edu" }
]
keywords = ["image processing", "feature extraction", "computer vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-image",
    "phasepack @ git+https://github.com/WHOIGit/phasepack@v1.6.1",
    "scikit-learn",
    "ifcbkit @ git+https://github.com/WHOIGit/ifcbkit@v0.2.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/WHOIGit/ifcb-features"
Repository = "https://github.com/WHOIGit/ifcb-features.git"
Issues = "https://github.com/WHOIGit/ifcb-features/issues"

[tool.hatch.build.targets.wheel]
packages = ["ifcb_features"]

[tool.hatch.build.targets.sdist]
include = [
    "/ifcb_features",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
# extract_slim_features.py lives at the repo root, not in the installed package
pythonpath = ["."]
testpaths = ["tests"]
